[gd_scene load_steps=2 format=3 uid="uid://blhtxu6bwdox1"]

[ext_resource type="Script" path="res://AutoLoad/NetworkManager/NetworkManager.gd" id="1"]

[node name="NetworkManager" type="Node"]
script = ExtResource("1")

[node name="HTTPRequestGet" type="HTTPRequest" parent="."]
timeout = 10.0

[node name="HTTPRequestPost" type="HTTPRequest" parent="."]
timeout = 10.0

[connection signal="request_completed" from="HTTPRequestGet" to="." method="_on_http_request_get_request_completed"]
[connection signal="request_completed" from="HTTPRequestPost" to="." method="_on_http_request_post_request_completed"]
